change is_safe function to be more legible

--- a/2024/day_02.ipynb
+++ b/2024/day_02.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,16 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_safe(report):\n",
-    "    previous_levels = report[:-1]\n",
-    "    levels = report[1:]\n",
     "    differences = []\n",
-    "    for level in range(len(report) - 1):\n",
-    "        differences.append(levels[level] - previous_levels[level])\n",
+    "    for level in range(1, len(report)):\n",
+    "        differences.append(report[level] - report[level - 1])\n",
     "    \n",
     "    for current_difference in differences:\n",
     "        if abs(current_difference) < 1 or abs(current_difference) > 3:\n",
@@ -110,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
