--- a/2024/day_06.ipynb
+++ b/2024/day_06.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -266,6 +266,7 @@
     "        while patrolling:\n",
     "            x, y, direction, lab_map, patrolling = move_guard(x, y, direction, lab_map, patrolling)\n",
     "            step_count += 1\n",
+    "            # Don't judge me. I know this is bad! What if there is a no-loop path longer than 10000? Fortunately there is not :)\n",
     "            if step_count > 10000:\n",
     "                looped_paths += 1\n",
     "                break\n",
