add complete day 9 (accidentally committed an incorrect version)

--- a/2024/day_09.ipynb
+++ b/2024/day_09.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,12 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# # Comment this cell to use the puzzle input instead of the test input\n",
-    "# disk_map = \"\"\"2333133121414131402\"\"\""
+    "# disk_map = \"2333133121414131402\""
    ]
   },
   {
@@ -58,123 +58,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "disk = \"\"\n",
+    "disk = []\n",
     "id = 0\n",
     "for index, number in enumerate(disk_map):\n",
     "    if index % 2 == 0:\n",
-    "        disk += int(number) * str(id)\n",
+    "        for i in range(int(number)):\n",
+    "            disk.append(str(id))\n",
     "        id += 1\n",
     "    elif index % 2 == 1:\n",
-    "        disk += int(number) * \".\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First attempt, too slow, it would take around 30 minutes to execute."
+    "        for i in range(int(number)):\n",
+    "            disk.append(\".\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# disk = list(disk)\n",
-    "# compacted_disk = disk.copy()\n",
-    "# for i, file_part in enumerate(disk[::-1]):\n",
-    "#     print(f\"{i} / {len(disk)}\") if i % 10000 == 0 else None\n",
-    "#     if compacted_disk[len(disk) - i - 1].isdigit():\n",
-    "#         first_available_space = compacted_disk.index(\".\")\n",
-    "#         compacted_disk[first_available_space] = file_part\n",
-    "#         compacted_disk[len(disk) - i - 1] = \".\"\n",
-    "#     check_finished_count = 0\n",
-    "#     for a, b in zip(compacted_disk[:-1], compacted_disk[1:]):\n",
-    "#         if a.isdigit() and not b.isdigit():\n",
-    "#             check_finished_count += 1\n",
-    "#         if check_finished_count > 1:\n",
-    "#             break\n",
-    "#     if check_finished_count == 1:\n",
-    "#         break\n",
-    "\n",
-    "# checksum = 0\n",
-    "# for i, file_part in enumerate(compacted_disk):\n",
-    "#     if not file_part.isdigit():\n",
-    "#         break\n",
-    "#     checksum += i * int(file_part)\n",
-    "\n",
-    "# print(f\"The filesystem checskum is {checksum}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Second attempt."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.00%\n",
-      "4.19%\n",
-      "8.39%\n",
-      "12.58%\n",
-      "16.78%\n",
-      "20.97%\n",
-      "25.17%\n",
-      "29.36%\n",
-      "33.56%\n",
-      "37.75%\n",
-      "41.95%\n",
-      "46.14%\n",
-      "50.34%\n",
-      "54.53%\n",
-      "58.73%\n",
-      "62.92%\n",
-      "67.11%\n",
-      "71.31%\n",
-      "75.50%\n",
-      "79.70%\n",
-      "The filesystem checskum is 89755341581\n"
+      "The filesystem checskum is 6291146824486\n"
      ]
     }
    ],
    "source": [
-    "split_disk = list(disk)\n",
-    "digits = \"\".join([chunk for chunk in split_disk if chunk != \".\"])\n",
+    "digits = [chunk for chunk in disk if chunk != \".\"]\n",
     "data_length = len(digits)\n",
     "compacted_disk = []\n",
-    "for i, chunk in enumerate(split_disk):\n",
-    "    print(f\"{i / len(split_disk) * 100:.2f}%\") if i % 10000 == 0 else None\n",
+    "for chunk in disk:\n",
     "    if chunk.isdigit():\n",
     "        compacted_disk.append(chunk)\n",
     "    elif chunk == \".\":\n",
     "        compacted_disk.append(digits[-1])\n",
-    "        digits = digits[:-1]\n",
-    "    compacted_disk_str = \"\".join(compacted_disk)\n",
-    "    if len(compacted_disk_str) == data_length:\n",
+    "        digits.pop(-1)\n",
+    "    if len(compacted_disk) == data_length:\n",
     "        break\n",
     "\n",
-    "compacted_disk = list(compacted_disk_str)\n",
     "checksum = 0\n",
-    "for i, file_part in enumerate(compacted_disk):\n",
-    "    if not file_part.isdigit():\n",
-    "        break\n",
-    "    checksum += i * int(file_part)\n",
+    "for i, chunk in enumerate(compacted_disk):\n",
+    "    checksum += i * int(chunk)\n",
     "\n",
     "print(f\"The filesystem checskum is {checksum}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_spaces(disk, n):\n",
+    "    n = int(n)\n",
+    "    count = 0\n",
+    "    for i, chunk in enumerate(disk):\n",
+    "        if chunk == \".\":\n",
+    "            count += 1\n",
+    "            if count == n:\n",
+    "                return i - n + 1\n",
+    "        else:\n",
+    "            count = 0\n",
+    "    return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 / 10000\n",
+      "1000 / 10000\n",
+      "2000 / 10000\n",
+      "3000 / 10000\n",
+      "4000 / 10000\n",
+      "5000 / 10000\n",
+      "6000 / 10000\n",
+      "7000 / 10000\n",
+      "8000 / 10000\n",
+      "9000 / 10000\n",
+      "The filesystem checskum with good fragmentation is 6307279963620\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = list(map(int, list(disk_map[::2])))\n",
+    "data_length = len(data)\n",
+    "compacted_disk = disk.copy()\n",
+    "for i, chunk_size in enumerate(data[::-1]):\n",
+    "    print(f\"{i} / {data_length}\") if i % 1000 == 0 else None\n",
+    "    id = str(data_length - i - 1)\n",
+    "    available_space = find_spaces(compacted_disk, chunk_size)\n",
+    "    if available_space >= 0 and available_space < compacted_disk.index(id):\n",
+    "        while id in compacted_disk:\n",
+    "            compacted_disk[compacted_disk.index(id)] = \".\"\n",
+    "        for j in range(chunk_size):\n",
+    "            compacted_disk[available_space + j] = id\n",
+    "\n",
+    "checksum = 0\n",
+    "for i, chunk in enumerate(compacted_disk):\n",
+    "    if chunk != \".\":\n",
+    "        checksum += i * int(chunk)\n",
+    "\n",
+    "print(f\"The filesystem checskum with good fragmentation is {checksum}\")"
    ]
   }
  ],
