--- a/2024/day_12.ipynb
+++ b/2024/day_12.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,21 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# # Comment this cell to use the puzzle input instead of the test input\n",
-    "# input = \"\"\"RRRRIICCFF\n",
-    "# RRRRIICCCF\n",
-    "# VVRRRCCFFF\n",
-    "# VVRCCCJFFF\n",
-    "# VVVVCJJCFE\n",
-    "# VVIVCCJJEE\n",
-    "# VVIIICJJEE\n",
-    "# MIIIIIJJEE\n",
-    "# MIIISIJEEE\n",
-    "# MMMISSJEEE\"\"\""
+    "# input = \"\"\"AAAA\n",
+    "# BBCD\n",
+    "# BBCC\n",
+    "# EEEC\"\"\""
    ]
   },
   {
@@ -67,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,15 +72,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The approach I took to form the regions is to go through the farm left to right and top to bottom, and if the left or upper plot is of the same type, I add it to that region.\n",
+    "\n",
+    "This sometimes separates plots that should be together, as they touch in another direction, so they are joined afterwards."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The total price of the fencing will be 1473276\n"
+      "The total price of the fencing will be 1473276.\n"
      ]
     }
    ],
@@ -115,8 +118,7 @@
     "        if region_1 == region_2:\n",
     "            continue\n",
     "        if region_1[0][2] == region_2[0][2]:\n",
-    "            for plot in region_1:\n",
-    "                x, y, type = plot\n",
+    "            for x, y, type in region_1:\n",
     "                if (x - 1, y, type) in region_2 or (x + 1, y, type) in region_2 or (x, y - 1, type) in region_2 or (x, y + 1, type) in region_2:\n",
     "                    same_regions.add(tuple(sorted((i, j))))\n",
     "                    break\n",
@@ -156,8 +158,7 @@
     "areas = {}\n",
     "for i, region in farm_regions.items():\n",
     "    areas[i] = len(region)\n",
-    "    for plot in region:\n",
-    "        x, y, type = plot\n",
+    "    for x, y, type in region:\n",
     "        if x == 0 or farm[y][x - 1] != type:\n",
     "            perimeters[i] += 1\n",
     "        if x == farm_width - 1 or farm[y][x + 1] != type:\n",
@@ -172,7 +173,105 @@
     "for area, perimeter in zip(areas.values(), perimeters.values()):\n",
     "    price += area * perimeter\n",
     "\n",
-    "print(f\"The total price of the fencing will be {price}\")"
+    "print(f\"The total price of the fencing will be {price}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I read a little hint that said that the number of sides is always equal to the number of corners (unfortunately I didn't realize that myself ☹️).\n",
+    "\n",
+    "To calculate the amount of corners, I took a two step approach, first the convex corners and then the concave ones.\n",
+    "\n",
+    "The convex corners are easy, as they only depend on which sides of a given plot are neighboring another plot. The concave corners require information of two side plots."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total price of the fencing will be 901100.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Format each region as a set of plots, each with a combination of corners {(x, y): (west, east, north, south)}\n",
+    "regions_with_fences = {}\n",
+    "for id, region in farm_regions.items():\n",
+    "    fences = {}\n",
+    "    for x, y, type in region:\n",
+    "        west = 0\n",
+    "        east = 0\n",
+    "        north = 0\n",
+    "        south = 0\n",
+    "        if not (x - 1, y, type) in region:\n",
+    "            west = 1\n",
+    "        if not (x + 1, y, type) in region:\n",
+    "            east = 1\n",
+    "        if not (x, y - 1, type) in region:\n",
+    "            north = 1\n",
+    "        if not (x, y + 1, type) in region:\n",
+    "            south = 1\n",
+    "        fences[(x, y)] = (west, east, north, south)\n",
+    "    regions_with_fences[id] = fences\n",
+    "\n",
+    "# List all the cases of convex corners for each kind of plot\n",
+    "corner_cases = {\n",
+    "    (0, 0, 0, 0): 0,\n",
+    "    (0, 0, 0, 1): 0,\n",
+    "    (0, 0, 1, 0): 0,\n",
+    "    (0, 0, 1, 1): 0,\n",
+    "    (0, 1, 0, 0): 0,\n",
+    "    (0, 1, 0, 1): 1,\n",
+    "    (0, 1, 1, 0): 1,\n",
+    "    (0, 1, 1, 1): 2,\n",
+    "    (1, 0, 0, 0): 0,\n",
+    "    (1, 0, 0, 1): 1,\n",
+    "    (1, 0, 1, 0): 1,\n",
+    "    (1, 0, 1, 1): 2,\n",
+    "    (1, 1, 0, 0): 0,\n",
+    "    (1, 1, 0, 1): 2,\n",
+    "    (1, 1, 1, 0): 2,\n",
+    "    (1, 1, 1, 1): 4\n",
+    "}\n",
+    "\n",
+    "# Calculate the number of corners\n",
+    "number_corners = {}\n",
+    "for id, region in regions_with_fences.items():\n",
+    "    count = 0\n",
+    "    for coords, corner in region.items():\n",
+    "        x, y = coords\n",
+    "        count += corner_cases[corner]\n",
+    "        # Take into account concave corners, which don't depend on a single plot\n",
+    "        if (x + 1, y) in region and region[(x + 1, y)][3] != 0 and (x, y + 1) in region and region[(x, y + 1)][1] != 0:\n",
+    "            count += 1\n",
+    "        if (x + 1, y) in region and region[(x + 1, y)][2] != 0 and (x, y - 1) in region and region[(x, y - 1)][1] != 0:\n",
+    "            count += 1\n",
+    "        if (x - 1, y) in region and region[(x - 1, y)][3] != 0 and (x, y + 1) in region and region[(x, y + 1)][0] != 0:\n",
+    "            count += 1\n",
+    "        if (x - 1, y) in region and region[(x - 1, y)][2] != 0 and (x, y - 1) in region and region[(x, y - 1)][0] != 0:\n",
+    "            count += 1\n",
+    "    number_corners[id] = count\n",
+    "\n",
+    "# Calculate the total price\n",
+    "price = 0\n",
+    "for area, perimeter in zip(areas.values(), number_corners.values()):\n",
+    "    price += area * perimeter\n",
+    "\n",
+    "print(f\"The total price of the fencing will be {price}.\")"
    ]
   }
  ],
