--- a/2024/day_17.ipynb
+++ b/2024/day_17.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,6 +312,89 @@
     "#     counter += 1\n",
     "\n",
     "# print(f\"The lowest value of A to cause the program to output a copy of itself is {counter}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This method was reached after many many observations to the behaviour of changing the A value:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "265601188299675"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "running = True\n",
+    "\n",
+    "numbers = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  # The n-th number represents n * 8 ** pos, where n is the value and pos is the index\n",
+    "\n",
+    "# Iterate from the biggest number, which changes the right-most output value\n",
+    "position = len(numbers) - 1\n",
+    "while position >= 0:\n",
+    "    output = []\n",
+    "    A = 0\n",
+    "    for index, number in enumerate(numbers):\n",
+    "        A += number * 8 ** index\n",
+    "    B = initial_B\n",
+    "    C = initial_C\n",
+    "\n",
+    "    i = 0\n",
+    "    while i < len(program):\n",
+    "        skip_increment = False\n",
+    "        opcode = program[i]\n",
+    "        operand = program[i + 1]\n",
+    "\n",
+    "        if opcode == 0:\n",
+    "            adv(operand)\n",
+    "        elif opcode == 1:\n",
+    "            bxl(operand)\n",
+    "        elif opcode == 2:\n",
+    "            bst(operand)\n",
+    "        elif opcode == 3:\n",
+    "            jnz(operand)\n",
+    "        elif opcode == 4:\n",
+    "            bxc(operand)\n",
+    "        elif opcode == 5:\n",
+    "            out(operand)\n",
+    "        elif opcode == 6:\n",
+    "            bdv(operand)\n",
+    "        elif opcode == 7:\n",
+    "            cdv(operand)\n",
+    "\n",
+    "        if not skip_increment:\n",
+    "            i += 2\n",
+    "\n",
+    "    if output[position] == program[position]:\n",
+    "        # If the value coincides between the output and the program, go to the next number\n",
+    "        position -= 1\n",
+    "    elif numbers[position] >= 7 and position < len(numbers) - 1:\n",
+    "        # If it doesn't and we reach 7, go back to the previous number\n",
+    "        numbers[position] = 0\n",
+    "        position += 1\n",
+    "        numbers[position] += 1\n",
+    "    else:\n",
+    "        # If it doesn't but it's not 7 yet, just increase that number\n",
+    "        numbers[position] += 1\n",
+    "\n",
+    "# Reconstruct A from the numbers\n",
+    "A = 0\n",
+    "for index, number in enumerate(numbers):\n",
+    "    A += number * 8 ** index\n",
+    "print(f\"The lowest value of A to cause the program to output a copy of itself is {A}.\")\n"
    ]
   }
  ],
