--- a/2025/day_01.ipynb
+++ b/2025/day_01.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 267,
    "id": "405e324a",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 268,
    "id": "0b79c499",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 269,
    "id": "7e07fe01",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 270,
    "id": "f30e5e87",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 271,
    "id": "8e5b024e",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
     "    if rotation < 0:\n",
     "        if position == 0:\n",
     "            crossed_zeros += 1\n",
-    "        if previous_position == 0 and crossed_zeros > 0:\n",
+    "        if previous_position == 0:\n",
     "            crossed_zeros -= 1\n",
     "    \n",
     "    password += crossed_zeros\n",
