add extra comments

--- a/2025/day_05.ipynb
+++ b/2025/day_05.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 377,
    "id": "0aa7435a",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 378,
    "id": "cf36606c",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 379,
    "id": "2eb8f0c8",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 380,
    "id": "33a479a1",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 381,
    "id": "94627b66",
    "metadata": {},
    "outputs": [],
@@ -154,12 +154,14 @@
    "id": "28709437",
    "metadata": {},
    "source": [
-    "Finally I thought of creating non overlapping ranges, but couldn't figure out how to do that easily. It was easier for me to create a non overlapping range of **non** fresh ingredients. I started with a range encompassing all the possible values, and began chipping away the fresh ones. Once I had the non overlapping list of non fresh ingredients, it was just a matter of subtracting the total amount of non fresh ingredients to the total amount of fresh ingredients (`max_id - min_id`)."
+    "Finally I thought of creating non overlapping ranges, but couldn't figure out how to do that easily. It was easier for me to create a non overlapping range of **non** fresh ingredients. I started with a range encompassing all the possible values, and began chipping away the fresh ones. Once I had the non overlapping list of non fresh ingredients, it was just a matter of subtracting the total amount of non fresh ingredients to the total amount of fresh ingredients (`max_id - min_id`).\n",
+    "\n",
+    "The many if statements could probably be reduced, but this is what I had at the time of solving it. 🙂"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 382,
    "id": "c81c9c5a",
    "metadata": {},
    "outputs": [
