another unsuccessful attempt at day 9 part 2

--- a/2025/day_09.ipynb
+++ b/2025/day_09.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 489,
    "id": "12332e35",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 490,
    "id": "3cee1987",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 491,
    "id": "3d4d4023",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 492,
    "id": "e108cbd9",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 493,
    "id": "1ae9eebf",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 494,
    "id": "8a39bc1c",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 495,
    "id": "fdacc08a",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 496,
    "id": "7b033be7",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 497,
    "id": "4a53ed61",
    "metadata": {},
    "outputs": [
@@ -296,6 +296,57 @@
     " \n",
     "    if this_square:\n",
     "        print(f\"The largest area of a rectangle using only green and red tiles is {square[0]}. (not correct)\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f472d11",
+   "metadata": {},
+   "source": [
+    "Another attempt, compacting the coordinates and then brute-forcing it. This works again for the test input, but not for the actual input. I'm beginning to suspect that the issue is with the `is_inside` function..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 498,
+   "id": "edde9e06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The largest area of a rectangle using only green and red tiles is 4740155680. (not correct)\n"
+     ]
+    }
+   ],
+   "source": [
+    "red_tiles_compacted = [(i, x, y) for i, (x, y) in enumerate(red_tiles)]\n",
+    "red_tiles_compacted = sorted(red_tiles_compacted, key=lambda x: x[1])\n",
+    "lookup_x = sorted(list(set([x for _, x, _ in red_tiles_compacted])))\n",
+    "red_tiles_compacted = sorted(red_tiles_compacted, key=lambda x: x[2])\n",
+    "lookup_y = sorted(list(set([y for _, _, y in red_tiles_compacted])))\n",
+    "\n",
+    "squares_compacted = [(area, (lookup_x.index(tile1[0]), lookup_y.index(tile1[1])), (lookup_x.index(tile2[0]), lookup_y.index(tile2[1]))) for area, tile1, tile2 in squares]\n",
+    "\n",
+    "lines_compacted = [((lookup_x.index(x1), lookup_y.index(y1)), (lookup_x.index(x2), lookup_y.index(y2))) for (x1, y1), (x2, y2) in lines]\n",
+    "\n",
+    "for area, p1, p2 in squares_compacted:\n",
+    "    x_vals = [p1[0], p2[0]]\n",
+    "    y_vals = [p1[1], p2[1]]\n",
+    "    \n",
+    "    this_square = True\n",
+    "    for x in range(min(x_vals), max(x_vals) + 1):\n",
+    "        for y in range(min(y_vals), max(y_vals) + 1):\n",
+    "            if not is_inside((x, y), lines_compacted):\n",
+    "                this_square = False\n",
+    "                break\n",
+    "        if not this_square:\n",
+    "            break\n",
+    "    \n",
+    "    if this_square:\n",
+    "        print(f\"The largest area of a rectangle using only green and red tiles is {area}. (not correct)\")\n",
     "        break"
    ]
   }
